--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -6,3 +6,8 @@ html {
   font-size: 20px;
   scroll-behavior: smooth;
 }
+
+code{
+  display: flex;
+  @apply bg-gray-200 px-5 py-2 rounded-lg mt-5 mb-5
+}
